--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-signature": "^2.6.0",
-    "vue-signature-pad": "^3.0.2"
+    "vue-signature-pad": "^3.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
